environments/gloo-gateway/gateway-api/portal-only/gloo-portal-demo/base/solo-dev-portal/portal-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-frontend-route
  namespace: gloo-system
spec:
  parentRefs:
    - name: https
      namespace: gloo-system
  hostnames:
    - solo-dev-portal.ggv2.glooplatform.com
  rules:
    - backendRefs:
        - name: portal-frontend
          namespace: gloo-system
          port: 4000
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-frontend-route-policies
